examples/test/testpolicy2285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2285
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key7: value13
      key28: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value29
      podSelector:
        matchLabels:
          key46: value23
          key32: value8
